Navbar feito e troca entre os temas

--- a/src/geral/calculadora.html
+++ b/src/geral/calculadora.html
@@ -4,20 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/@unocss/reset@66.1.1/tailwind-compat.css">
-    <link rel="stylesheet" href="src/index.css">
-    <link rel="stylesheet" href="src/padroes.css">
+    <link rel="stylesheet" href="../index.css">
+    <link rel="stylesheet" href="../padroes.css">
     <title>EU</title>
 </head>
 <body class="tema tema--escuro" id="body">
     <nav class="">
         <ul class="flex">
-            <li ><a href=""><p class="-color bv">Bem Vindo(a)!</p></a></li>
-            <li><a href="src/geral/calculadora.html"><p class="link">Calculadora</p></a></li>
+            <li ><a href="../../index.html"><p class="-color bv">Bem Vindo(a)!</p></a></li>
+            <li><a href="#"><p class="link">Calculadora</p></a></li>
             <li class="flex-1"></li>
             <li ><button onclick="mudarTema()" id="tema" class="mudar-tema bg-text"></button></li>
         </ul>
     </nav>
-
-    <script src="src/index.js"></script>
+    <script src="../index.js"></script>
 </body>
 </html>
