Calculadora simples funcionando

--- a/src/geral/calculadora.html
+++ b/src/geral/calculadora.html
@@ -17,6 +17,27 @@
             <li ><button onclick="mudarTema()" id="tema" class="mudar-tema bg-text"></button></li>
         </ul>
     </nav>
+    <div class="calculadora">
+        <input type="text" id="tela">
+        <div class="numeros">
+            <button class="botao" data-key="7"  >7</button>
+            <button class="botao" data-key="8" >8</button>
+            <button class="botao" data-key="9" >9</button>
+            <button class="botao" data-key="/" >/</button><br>
+            <button class="botao" data-key="4" >4</button>
+            <button class="botao" data-key="5" >5</button>
+            <button class="botao" data-key="6" >6</button>
+            <button class="botao" data-key="*" >*</button><br>
+            <button class="botao" data-key="1" >1</button>
+            <button class="botao" data-key="2" >2</button>
+            <button class="botao" data-key="3" >3</button>
+            <button class="botao" data-key="-" >-</button><br>
+            <button class="botao" data-key="0" >0</button>
+            <button class="botao" data-key="." >.</button>
+            <button class="botao botao-esticado" data-key="=" >=</button>
+            <button class="botao" data-key="+" >+</button>
+        </div>
+    </div>
     <script src="../index.js"></script>
 </body>
 </html>
