--- a/src/geral/calculadora.html
+++ b/src/geral/calculadora.html
@@ -12,12 +12,13 @@
     <!-- menu -->
     <nav class="">
         <ul class="flex">
-            <li ><a href="../../index.html"><p class="-color bv">Bem Vindo(a)!</p></a></li>
-            <li><a href="#"><p class="link">Calculadora</p></a></li>
+            <li ><a href="../../index.html"><p class="-color bv">Home</p></a></li>
+            <li><a href="./gerador de personagens/gerador.html"><p class="link">Meus Personagens</p></a></li>
             <li class="flex-1"></li>
             <li ><button onclick="mudarTema()" id="tema" class="mudar-tema bg-text"></button></li>
         </ul>
     </nav>
+    <div class="conteudo">
     <!-- Botão para trocar de calculadora -->
     <!-- <div class="escolha">
         <button onclick="trocarCalc()"><p>Padrão/Cientifica</p></button> 
@@ -51,6 +52,14 @@
     <!-- <div class="calculadora-cientifica hide" id="calculadora-cientif">
         <input type="text" id="tela"> 
     </div> -->
+    </div>
+    <footer class="rodape">
+    <ul class="lista">
+        <li class="li"><a href="https://github.com/Fkaique"><strong class="color-secondary">GitHub</strong> : Fkaique</a></li>
+        <li class="li"><a href="https://mysteriescradle.itch.io/"><strong class="color-secondary">Itch.io</strong> : MysteriesCradle</a></li>
+        <li class="li"><a href="https://gx.games/pt-br/studios/b861e49e-f878-4cf1-8b3c-5c48eb75418e/"><strong class="color-secondary">GxGames</strong> : MysteriesCradle</a></li>
+    </ul>
+    </footer>
     <script src="../index.js"></script>
 </body>
 </html>
