modificações pequenas, melhoria da galeria

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="">
         <ul class="flex">
             <li ><a href=""><p class="-color bv">Home</p></a></li>
-            <li><a href="./src/geral/gerador de personagens/gerador.html"><p class="link">Meus Personagens</p></a></li>
+            <li><a href="./src/geral/gerador de personagens/gerador.html"><p class="link">Galeria</p></a></li>
             <li class="flex-1"></li>
             <li ><button onclick="mudarTema()" id="tema" class="mudar-tema bg-text"></button></li>
         </ul>
@@ -28,7 +28,7 @@
         <strong class="color-primary">Idade</strong>: 20,
         <strong class="color-primary">Cidade</strong>: "Aracati - CE",
         <strong class="color-primary">Formação</strong>: [TI, Cursando BCC],
-        <strong class="color-primary">Projetos</strong>: MyProjects()
+        <strong class="color-primary">Projetos</strong>: MyProjects
     }
     <strong class="color-secondary">MyProjects</strong> = {
         <strong class="color-primary">PantsLife</strong>: {
