--- a/src/geral/gerador de personagens/gerador.html
+++ b/src/geral/gerador de personagens/gerador.html
@@ -14,7 +14,7 @@
     <nav class="">
         <ul class="flex">
             <li ><a href="../../../index.html"><p class="-color bv">Home</p></a></li>
-            <li><a href="#"><p class="link">Meus Personagens</p></a></li>
+            <li><a href="#"><p class="link">Galeria</p></a></li>
             <li class="flex-1"></li>
             <li ><button onclick="mudarTema()" id="tema" class="mudar-tema bg-text"></button></li>
         </ul>
