--- a/src/geral/calculadora.html
+++ b/src/geral/calculadora.html
@@ -13,7 +13,7 @@
     <nav class="">
         <ul class="flex">
             <li ><a href="../../index.html"><p class="-color bv">Home</p></a></li>
-            <li><a href="./gerador de personagens/gerador.html"><p class="link">Meus Personagens</p></a></li>
+            <li><a href="./gerador de personagens/gerador.html"><p class="link">Galeria</p></a></li>
             <li class="flex-1"></li>
             <li ><button onclick="mudarTema()" id="tema" class="mudar-tema bg-text"></button></li>
         </ul>
