ajustei a galeria e fiz o dormitorio

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <ul class="flex">
             <li ><a href=""><p class="-color bv">Home</p></a></li>
             <li><a href="./src/geral/gerador de personagens/gerador.html"><p class="link">Galeria</p></a></li>
+            <li><a href="./src/geral/Projetos/dormitorio/index.html"><p class="link">Dormitório</p></a></li>
             <li class="flex-1"></li>
             <li ><button onclick="mudarTema()" id="tema" class="mudar-tema bg-text"></button></li>
         </ul>
@@ -30,9 +31,14 @@
         <strong class="color-primary">Formação</strong>: [TI, Cursando BCC],
         <strong class="color-primary">Projetos</strong>: MyProjects
     }
+    <div style="width: 400px;">
     <strong class="color-secondary">MyProjects</strong> = {
         <strong class="color-primary">PantsLife</strong>: {
             <strong class="color-error">Envolvidos</strong>: <a href="https://github.com/Fkaique">Fkaique</a>,
+            <strong class="color-error">Descrição</strong>: "Uma calça andando sozinha? 
+                Bom. é melhor correr. alguém deve 
+                estar com frio por ai! ( ninguém 
+                sem roupas, não se preocupe)",
             <strong class="color-error">Link1</strong>: <a href="https://mysteriescradle.itch.io/life-in-pants">itch.io</a>,
             <strong class="color-error">Link2</strong>: <a href="https://gx.games/pt-br/games/vpdabd/pants-life/">GxGames</a>,
             <strong class="color-error">Link3</strong>: <a href="https://github.com/Fkaique/Life-in-Pants">GitHub</a>
@@ -41,7 +47,7 @@
             <strong class="color-error">Envolvidos</strong>: <a href="https://github.com/Fkaique">Fkaique</a>,
             <strong class="color-error">Link1</strong>: <a href="./src/geral/calculadora.html">Calculadora</a>
         }
-    }
+    }</div>
             </pre> 
         </div>
     </div>
