--- a/src/geral/calculadora.html
+++ b/src/geral/calculadora.html
@@ -14,6 +14,7 @@
         <ul class="flex">
             <li ><a href="../../index.html"><p class="-color bv">Home</p></a></li>
             <li><a href="./gerador de personagens/gerador.html"><p class="link">Galeria</p></a></li>
+            <li><a href="./Projetos/dormitorio/index.html"><p class="link">Dormitório</p></a></li>
             <li class="flex-1"></li>
             <li ><button onclick="mudarTema()" id="tema" class="mudar-tema bg-text"></button></li>
         </ul>
